Motion Media Tasks.

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -27,6 +27,8 @@
                 <a href="{{ viewContractUrl }}" class="btn btn-default btn-cancel">Cancel</a>
                 &nbsp;
                 <a href="{{ contractListingUrl }}" class="btn btn-default btn-cancel">Back to Contract Listing</a>
+                &nbsp;
+                <a  id="delete-btn" class="btn btn-default btn-delete">Delete</a>
             </div>
 
             <div class="form-actions view-contract-action-buttons" style="display: none">
@@ -728,6 +730,7 @@
     <script type="text/javascript" src="{{ f3mm_data_manager.js }}"></script>
     <script type="text/javascript" src="{{ f3mm_create_contract_ui_manager.js }}"></script>
     <script type="text/javascript" src="{{ f3mm_init.js }}"></script>
+    <script type="text/javascript" src="{{ arrive.min.js }}"></script>
 
 </body>
 </html>
